// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages Test Suite pages/404 Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <h4
        className="sc-AxiKw sc-AxhUy gGHSWu"
      >
        Man, I hate when this happens...
      </h4>
      Find your way 
      <a
        className="sc-AxirZ sc-AxgMl dCBnMA"
        href="/about-me"
        target="_blank"
        variant="underlined"
      >
        Home
      </a>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/about-me Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <div
        className="sc-AxirZ dOlGtM"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl fFXmft"
          href="mailto:contact@fake.test"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-AxirZ iyLeer"
            width={
              Object {
                "_": 32,
                "mobileM": 38,
              }
            }
          >
            <div
              className=" gatsby-image-wrapper"
              style={
                Object {
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <div
                aria-hidden={true}
                style={
                  Object {
                    "paddingBottom": "100%",
                    "width": "100%",
                  }
                }
              />
              <img
                alt=""
                aria-hidden={true}
                src="data:image/png;base64"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "transitionDelay": "500ms",
                    "width": "100%",
                  }
                }
              />
              <picture>
                <source
                  srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                />
                <img
                  alt="FakeContact"
                  loading="lazy"
                  onLoad={[Function]}
                  src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                  srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "objectFit": "cover",
                      "objectPosition": "center",
                      "opacity": 0,
                      "position": "absolute",
                      "top": 0,
                      "transition": "opacity 500ms",
                      "width": "100%",
                    }
                  }
                />
              </picture>
              <noscript
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"FakeContact\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                  }
                }
              />
            </div>
          </div>
        </a>
      </div>
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "100%",
              "width": "100%",
            }
          }
        />
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "borderRadius": 8,
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt="Cover"
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "borderRadius": 8,
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"Cover\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <p
        className="sc-AxiKw AaxGK"
        fontSize={20}
      >
        Hi there, I'm Jeremie!
      </p>
      <p
        className="sc-AxiKw AaxGK"
        fontSize={20}
      >
        I'm a Full Stack Engineer freelancer, previously working at 
        <a
          className="sc-AxirZ sc-AxgMl kNxdkB"
          href="https://fakecompany.test"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            className=" gatsby-image-wrapper"
            style={
              Object {
                "display": "inline-block",
                "height": undefined,
                "overflow": "hidden",
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64"
              style={
                Object {
                  "height": "25px",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <picture>
              <source
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              />
              <img
                alt="FakeCompany"
                loading="lazy"
                onLoad={[Function]}
                src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                style={
                  Object {
                    "height": "25px",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"FakeCompany\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </span>
        </a>
        .
      </p>
      <p
        className="sc-AxiKw AaxGK"
        fontSize={20}
      >
        I particularly enjoy working with those technologies:
      </p>
      <div
        className="sc-AxirZ hXGDhR sc-AxmLO fjzFqd"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl bWkxQa"
          href="https://image.tech"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className=" gatsby-image-wrapper"
            style={
              Object {
                "display": "inline-block",
                "height": undefined,
                "overflow": "hidden",
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64"
              style={
                Object {
                  "height": "52px",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "52px",
                }
              }
            />
            <picture>
              <source
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              />
              <img
                alt="TechImage"
                loading="lazy"
                onLoad={[Function]}
                src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                style={
                  Object {
                    "height": "52px",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "52px",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"TechImage\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="sc-AxirZ hzDttm"
        fontSize={20}
      >
        ▾ By the way, this is where I live, 
        <a
          className="sc-AxirZ sc-AxgMl fFXmft"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          San Francisco
        </a>
        ! ▾
      </div>
      <div
        className="sc-AxirZ lbvnpE"
      >
        <a
          className="sc-AxirZ sc-AxgMl fFXmft"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-Axmtr cCOgFY gatsby-image-wrapper"
            style={
              Object {
                "display": "inline-block",
                "height": undefined,
                "overflow": "hidden",
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <picture>
              <source
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              />
              <img
                alt="Location"
                loading="lazy"
                onLoad={[Function]}
                src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"Location\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </div>
        </a>
        <div
          className="sc-AxirZ gfnsAh"
          height={32}
          width={32}
        >
          <svg
            className="sc-AxhCb bgTglM"
            cursor="help"
            height={32}
            onClick={[Function]}
            viewBox="0 0 512 512"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="256"
              cy="256"
              fill="#ffd93b"
              r="256"
            />
            <path
              d="M351.936 367.216c-7.36 40.8-39.84 81.92-96 81.92s-88.64-41.12-95.84-81.92c-1.12-6.08 3.04-11.84 9.12-12.96 6.08-.96 11.84 3.04 12.96 9.12 5.6 31.52 30.56 63.36 73.76 63.36s68.32-31.84 73.92-63.36c1.12-6.08 6.88-10.08 12.96-9.12 6.08 1.104 10.24 6.88 9.12 12.96z"
              fill="#3e4347"
            />
            <path
              d="M512 256c0 141.44-114.64 256-256 256-80.48 0-152.32-37.12-199.28-95.28 43.92 35.52 99.84 56.72 160.72 56.72 141.36 0 256-114.56 256-256 0-60.88-21.2-116.8-56.72-160.72C474.8 103.68 512 175.52 512 256z"
              fill="#f4c534"
            />
            <path
              d="M235.44 225.232c0 43.808-35.424 79.376-79.376 79.376-43.792 0-79.376-35.568-79.376-79.376 0-43.952 35.584-79.52 79.376-79.52 43.952 0 79.376 35.584 79.376 79.52z"
              fill="#fff"
            />
            <circle
              cx="156.064"
              cy="225.12"
              fill="#3e4347"
              r="36.16"
            />
            <path
              d="M276.624 225.088c0-43.808 35.424-79.376 79.376-79.376 43.808 0 79.376 35.568 79.376 79.376 0 43.952-35.568 79.52-79.376 79.52-43.952.016-79.376-35.568-79.376-79.52z"
              fill="#fff"
            />
            <path
              d="M485.264 213.168H445.76c-5.92-44.336-43.888-78.64-89.76-78.64-33.952 0-63.552 18.816-79.04 46.56-4.208 7.536-12.16 11.92-20.784 11.872h-.384c-8.592.064-16.512-4.336-20.688-11.84-15.488-27.76-45.088-46.592-79.04-46.592-45.856 0-83.744 34.336-89.68 78.64H26.736v24h39.92c5.568 41.408 39.216 74.736 81.6 78.32 53.632 4.544 99.44-38.224 98.304-92.144.912-4.512 4.72-7.968 9.472-7.968 4.864 0 9.376 3.504 9.376 9.872 0 52.288 44.56 94.384 97.696 90.304 42.528-3.264 76.832-36.528 82.368-78.384h39.776v-24h.016zm-329.2 80.224c-37.584 0-68.176-30.592-68.176-68.16 0-37.664 30.576-68.304 68.176-68.304 37.584 0 68.16 30.64 68.16 68.304 0 37.584-30.576 68.16-68.16 68.16zm199.936 0c-37.584 0-68.176-30.592-68.176-68.16 0-37.664 30.576-68.304 68.176-68.304 37.584 0 68.16 30.64 68.16 68.304 0 37.584-30.576 68.16-68.16 68.16z"
              fill="#3e4347"
            />
            <ellipse
              cx="169.695"
              cy="211.503"
              fill="#fff"
              rx="10"
              ry="6.48"
              transform="rotate(-135 169.696 211.505)"
            />
            <circle
              cx="356"
              cy="225.12"
              fill="#3e4347"
              r="36.16"
            />
            <ellipse
              cx="369.623"
              cy="211.559"
              fill="#fff"
              rx="10"
              ry="6.48"
              transform="rotate(-135 369.625 211.56)"
            />
            <path
              d="M413.776 107.456c-5.12 2.992-12.256 1.536-15.52-4.064-26.672-45.648-82.272-35.552-82.864-35.408-6.176 1.2-12.048-2.864-13.264-9.04-1.056-6.176 2.864-12.064 9.04-13.264 2.864-.448 71.872-12.96 106.672 46.256 3.168 5.424 1.36 12.368-4.064 15.52zm-315.552 0c5.12 2.992 12.256 1.536 15.52-4.064C140.416 57.744 196 67.84 196.608 67.984c6.176 1.2 12.048-2.864 13.264-9.04 1.056-6.176-2.864-12.064-9.04-13.264-2.864-.448-71.872-12.96-106.672 46.256-3.168 5.424-1.36 12.368 4.064 15.52z"
              fill="#3e4347"
            />
          </svg>
        </div>
      </div>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/index Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <section
      className="sc-AxirZ dsfwVk"
    />
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/posts Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <div
        className="sc-AxirZ sc-fzoLsD HbPMZ"
      >
        <ul
          className="sc-AxirZ sc-fzozJi jYZztF"
        >
          <label
            className="sc-AxiKw fvnIPL"
            color="secondary"
            display="block"
            fontSize={32}
            fontWeight="semi-bold"
          >
            2019
          </label>
          <li
            className="sc-AxirZ dAglKd"
            display="flex"
            fontSize={24}
            fontWeight="semi-bold"
          >
            <span
              className="sc-AxirZ vPLqU"
              color="primary"
              fontSize={16}
              fontWeight="bold"
            >
              AUG-08
            </span>
            <a
              className="sc-AxirZ sc-AxgMl fFXmft"
              href="/posts/test"
              target="_blank"
            >
              Test Post
            </a>
          </li>
        </ul>
      </div>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/skills Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <div
        className="sc-AxirZ klTXie"
      >
        <div
          className="sc-AxirZ dyShEu"
          display="flex"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 512 512"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 256C0 114.8 114.313.3 255.441 0c141.246-.3 255.414 112.652 256.551 253.89.613 76.227-32.097 144.825-84.43 192.11C382.165 404.984 322 380 256 380c-64.14 0-122.77 23.594-167.687 62.57-2.25 1.953-5.614 1.868-7.782-.175C30.957 395.707 0 329.473 0 256zm0 0"
              fill="#31859A"
            />
            <path
              d="M429.07 149.07a10 10 0 012.93 7.07v285.75C386.121 485.345 324.176 512 256 512s-130.121-26.656-176-70.11V70.11C91.836 58.897 86.191 48.804 100 40h215.86a10 10 0 017.07 2.93zm0 0"
              fill="#98e5fb"
            />
            <path
              d="M429.879 150H327a5 5 0 01-5-5V42.121c.324.25.637.516.93.809l106.14 106.14c.293.293.559.606.809.93zm0 0"
              fill="#c7eefd"
            />
            <path
              d="M118 40c-5.523 0-10 4.477-10 10v414.906a257.333 257.333 0 01-28-23.015V50c0-5.523 4.477-10 10-10zm0 0"
              fill="#62dafa"
            />
            <path
              d="M200 165v10a5 5 0 01-5 5h-59a5 5 0 01-5-5v-10a5 5 0 015-5h59a5 5 0 015 5zm-35 45h-29a5 5 0 00-5 5v10a5 5 0 005 5h29a5 5 0 005-5v-10a5 5 0 00-5-5zm0 40h-29a5 5 0 00-5 5v10a5 5 0 005 5h29a5 5 0 005-5v-10a5 5 0 00-5-5zm0 80h-29a5 5 0 00-5 5v10a5 5 0 005 5h29a5 5 0 005-5v-10a5 5 0 00-5-5zm0 40h-29a5 5 0 00-5 5v10a5 5 0 005 5h29a5 5 0 005-5v-10a5 5 0 00-5-5zm0 0"
              fill="#028fce"
            />
            <path
              d="M281 225v-10a5 5 0 015-5h19a5 5 0 015 5v10a5 5 0 01-5 5h-19a5 5 0 01-5-5zm-71 80v-10a5 5 0 00-5-5h-69a5 5 0 00-5 5v10a5 5 0 005 5h69a5 5 0 005-5zm135-15H235a5 5 0 00-5 5v10a5 5 0 005 5h110a5 5 0 005-5v-10a5 5 0 00-5-5zm-149.5-60H265a5 5 0 005-5v-10a5 5 0 00-5-5h-69.5a5 5 0 00-5 5v10a5 5 0 005 5zm0 40H225a5 5 0 005-5v-10a5 5 0 00-5-5h-29.5a5 5 0 00-5 5v10a5 5 0 005 5zm69.5 60h-69.5a5 5 0 00-5 5v10a5 5 0 005 5H265a5 5 0 005-5v-10a5 5 0 00-5-5zm110-80H245.25a5 5 0 00-5 5v10a5 5 0 005 5H375a5 5 0 005-5v-10a5 5 0 00-5-5zm0 0"
              fill="#01bff9"
            />
            <path
              d="M470 480H260c-5.523 0-10-4.477-10-10V350c0-5.523 4.477-10 10-10h210c5.523 0 10 4.477 10 10v120c0 5.523-4.477 10-10 10zm0 0"
              fill="#1f3595"
            />
            <path
              d="M470 480H280c-5.523 0-10-4.477-10-10V350c0-5.523 4.477-10 10-10h190c5.523 0 10 4.477 10 10v120c0 5.523-4.477 10-10 10zm0 0"
              fill="#17365C"
            />
            <path
              d="M451.695 417.07l-35.101 35.102a4.998 4.998 0 01-7.07 0l-5.989-5.988a4.998 4.998 0 010-7.07l27.7-27.7a2 2 0 000-2.828l-27.7-27.695a5.003 5.003 0 010-7.075l5.988-5.988a4.998 4.998 0 017.07 0l35.102 35.102c3.907 3.902 3.907 10.234 0 14.14zm-125.23-36.183a4.998 4.998 0 000-7.07l-5.988-5.989a4.998 4.998 0 00-7.07 0l-35.102 35.102c-3.907 3.902-3.907 10.234 0 14.14l35.101 35.102a4.998 4.998 0 007.07 0l5.989-5.988a4.998 4.998 0 000-7.07l-27.7-27.7a2 2 0 010-2.828zM378.902 360h-9.804a5.002 5.002 0 00-4.903 4.02l-18 90c-.617 3.093 1.75 5.98 4.903 5.98h9.804a5.002 5.002 0 004.903-4.02l18-90c.617-3.093-1.75-5.98-4.903-5.98zm0 0"
              fill="#fff5f5"
            />
          </svg>
          <span
            className="sc-AxiKw dBHZYU"
            color="primary"
            fontSize={20}
            fontWeight="bold"
          >
            PROGRAMMING
          </span>
        </div>
        <div
          className="sc-AxirZ dUjigO"
          display="flex"
          height={22}
        >
          <span
            className="sc-AxiKw eCKgrb"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 0
          </span>
          <div
            className="sc-AxirZ kJjEfF"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AxiKw hMIOxo"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              6
              /
              10
            </span>
          </div>
          <div
            className="sc-AxirZ jDCePp"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AxirZ kKTHPg"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
          </div>
        </div>
        <div
          className="sc-AxirZ dUjigO"
          display="flex"
          height={22}
        >
          <span
            className="sc-AxiKw eCKgrb"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 1
          </span>
          <div
            className="sc-AxirZ kJjEfF"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AxiKw hMIOxo"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              9
              /
              10
            </span>
          </div>
          <div
            className="sc-AxirZ jDCePp"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AxirZ kKTHPg"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
          </div>
        </div>
      </div>
      <div
        className="sc-AxirZ klTXie"
      >
        <div
          className="sc-AxirZ dyShEu"
          display="flex"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 512 512"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M66.832 427.922C25.984 382.887.949 323.254.508 257.77-.453 116.043 114.77 0 256.5 0c141.387 0 256 114.617 256 256 0 60.531-21.016 116.152-56.14 159.977a27.624 27.624 0 01-26.805 9.843c-53.86-10.441-112.168-16.152-173.055-16.152-66.273 0-129.496 6.766-187.246 19.031a2.548 2.548 0 01-2.422-.777zm0 0"
              fill="#31859A"
            />
            <path
              d="M450.5 160v250h-30V160c0-5.523-4.477-10-10-10h-120v-30h120c22.09 0 40 17.91 40 40zm0 0"
              fill="#17365C"
            />
            <path
              d="M460.5 285c0 13.809-11.191 25-25 25s-25-11.191-25-25 11.191-25 25-25 25 11.191 25 25zm0 0"
              fill="#fde5bd"
            />
            <path
              d="M360.5 60v400c0 11.047-8.953 20-20 20H152.55c-31.116-13.844-58.96-33.707-82.05-58.117V60c0-11.047 8.953-20 20-20h250c11.047 0 20 8.953 20 20zm0 0"
              fill="#235967"
            />
            <path
              d="M100.5 195v40a5 5 0 005 5h255v-50h-255a5 5 0 00-5 5zm150 7.5c6.902 0 12.5 5.598 12.5 12.5s-5.598 12.5-12.5 12.5S238 221.902 238 215s5.598-12.5 12.5-12.5zm-150-77.5v40a5 5 0 005 5h255v-50h-255a5 5 0 00-5 5zm150 8.5c6.902 0 12.5 5.598 12.5 12.5s-5.598 12.5-12.5 12.5S238 152.902 238 146s5.598-12.5 12.5-12.5zM100.5 265v40a5 5 0 005 5h255v-50h-255a5 5 0 00-5 5zm150 7.5c6.902 0 12.5 5.598 12.5 12.5s-5.598 12.5-12.5 12.5S238 291.902 238 285s5.598-12.5 12.5-12.5zm-145 57.5h255v70c0 11.047-8.953 20-20 20h-220c-11.047 0-20-8.953-20-20v-65a5 5 0 015-5zm235-290h-220c-11.047 0-20 8.953-20 20v35a5 5 0 005 5h255V60c0-11.047-8.953-20-20-20zm-90 42.5c-6.902 0-12.5-5.598-12.5-12.5s5.598-12.5 12.5-12.5S263 63.098 263 70s-5.598 12.5-12.5 12.5zm0 0"
              fill="#2b6c7e"
            />
            <path
              d="M278 70c0-6.902 5.598-12.5 12.5-12.5S303 63.098 303 70s-5.598 12.5-12.5 12.5S278 76.902 278 70zm12.5 63.5c-6.902 0-12.5 5.598-12.5 12.5s5.598 12.5 12.5 12.5S303 152.902 303 146s-5.598-12.5-12.5-12.5zm0 69c-6.902 0-12.5 5.598-12.5 12.5s5.598 12.5 12.5 12.5S303 221.902 303 215s-5.598-12.5-12.5-12.5zm0 70c-6.902 0-12.5 5.598-12.5 12.5s5.598 12.5 12.5 12.5S303 291.902 303 285s-5.598-12.5-12.5-12.5zm0 0"
              fill="#0ed1b2"
            />
            <path
              d="M318 70c0-6.902 5.598-12.5 12.5-12.5S343 63.098 343 70s-5.598 12.5-12.5 12.5S318 76.902 318 70zm12.5 63.5c-6.902 0-12.5 5.598-12.5 12.5s5.598 12.5 12.5 12.5S343 152.902 343 146s-5.598-12.5-12.5-12.5zm0 69c-6.902 0-12.5 5.598-12.5 12.5s5.598 12.5 12.5 12.5S343 221.902 343 215s-5.598-12.5-12.5-12.5zm0 70c-6.902 0-12.5 5.598-12.5 12.5s5.598 12.5 12.5 12.5S343 291.902 343 285s-5.598-12.5-12.5-12.5zm0 0"
              fill="#fde5bd"
            />
            <path
              d="M256.5 512c-75.379 0-143.14-32.582-189.988-84.426 9.55-19.379 29.496-32.719 52.558-32.719h1.489c13.332-26.07 40.433-43.925 71.726-43.925 12.637 0 24.59 2.918 35.235 8.105C245.129 327.965 278.488 307 316.75 307c51.758 0 94.547 38.363 101.5 88.203 15.355 1.649 28.926 9.234 38.39 20.41C409.73 474.355 337.517 512 256.5 512zm0 0"
              fill="#c7eefd"
            />
            <path
              d="M404.14 355.941c-17.605-12.37-39.05-19.656-62.202-19.656-34.137 0-64.583 15.785-84.442 40.457-6.203 7.703-16.379 11.098-25.96 8.64a85.215 85.215 0 00-21.177-2.655c-29.054 0-54.699 14.562-70.054 36.785-4.114 5.949-10.602 9.777-17.774 10.699-1.785.23-3.426.496-4.633.797-11.66 2.918-22.003 9.148-29.992 17.629a257.978 257.978 0 01-21.394-21.063c9.55-19.379 29.496-32.715 52.558-32.715h1.489c13.332-26.07 40.433-43.93 71.726-43.93 12.637 0 24.59 2.919 35.235 8.106C245.129 327.965 278.488 307 316.75 307c36.977 0 69.363 19.586 87.39 48.941zm0 0"
              fill="#98e5fb"
            />
          </svg>
          <span
            className="sc-AxiKw dBHZYU"
            color="primary"
            fontSize={20}
            fontWeight="bold"
          >
            DEVOPS
          </span>
        </div>
        <div
          className="sc-AxirZ dUjigO"
          display="flex"
          height={22}
        >
          <span
            className="sc-AxiKw eCKgrb"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 0
          </span>
          <div
            className="sc-AxirZ kJjEfF"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AxiKw hMIOxo"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              8
              /
              10
            </span>
          </div>
          <div
            className="sc-AxirZ jDCePp"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AxirZ kKTHPg"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
          </div>
        </div>
      </div>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;
